refactor: 将Long类型ID改为String类型以支持更广泛的ID格式
重构项目中多处ID字段，从Long类型改为String类型，以支持UUID等更广泛的ID格式。修改涉及多个模块的DTO、VO、Service、Mapper等组件，确保类型变更后系统功能保持一致。主要变更包括：
1. 将BaseDataBaseDto等基类中的judgeId字段改为String
2. 修改所有相关Service接口和实现类的参数类型
3. 更新Mapper接口的查询参数和返回类型
4. 调整Controller层接收的请求参数类型
5. 同步修改所有关联的DTO和VO对象

此变更为后续支持分布式ID生成和更灵活的ID格式提供基础，同时保持现有业务逻辑不变。