@@ -1,9 +1,9 @@
 package exam.demo.moduleuser.service.impl;
 
+import cn.hutool.core.collection.CollUtil;
 import com.baomidou.mybatisplus.core.conditions.query.QueryWrapper;
 import com.baomidou.mybatisplus.core.conditions.update.UpdateWrapper;
 import com.baomidou.mybatisplus.extension.service.impl.ServiceImpl;
-import cn.hutool.core.collection.CollUtil;
 import exam.demo.modulecommon.annotation.FullCommonFieldU;
 import exam.demo.modulecommon.common.CacheConstants;
 import exam.demo.modulecommon.common.CompanyAndUserVo;
@@ -87,7 +87,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
         user.setCompanyId(role.getCompanyId());
         try {
             save(user);
-            userRole.setId(snowFlake.nextId());
+            userRole.setId(snowFlake.nextIdStr());
             userRole.setUserId(user.getId());
             userRoleService.save(userRole);
         } catch (Exception e) {
@@ -206,11 +206,11 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
         }
         // 对角色的处理
         if (userDto.getRoleId() != null) {
-            List<Long> idList = new ArrayList<>();
+            List<String> idList = new ArrayList<>();
             idList.add(userDto.getRoleId());
             List<UserRole> userRoleList = userRoleService.listByRoleIds(idList);
-            List<UserRole> userRoles = userRoleList.stream().filter(u -> userDto.getRoleId().equals(u.getRoleId())).collect(Collectors.toList());
-            List<Long> userIdList = userRoles.stream().map(UserRole::getUserId).collect(Collectors.toList());
+            List<UserRole> userRoles = userRoleList.stream().filter(u -> userDto.getRoleId().equals(u.getRoleId())).toList();
+            List<String> userIdList = userRoles.stream().map(UserRole::getUserId).toList();
             userList = userList.stream().filter(u -> userIdList.contains(u.getId())).peek(u -> u.setRoleId(userDto.getRoleId())).collect(Collectors.toList());
         }
         if (CollUtil.isEmpty(userList)) {
@@ -235,7 +235,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
                 user.setRoleId(role.getId());
             }
         }
-        Map<Long, String> cache = new HashMap<>(userList.size() << 1);
+        Map<String, String> cache = new HashMap<>(userList.size() << 1);
         for (User user : userList) {
             String val;
             if (user.getDepartmentId() != null) {
@@ -301,9 +301,9 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
             userRoleService.deleteByUserId(userRoleDTO.getUserId());
             List<UserRole> userRoleList = new ArrayList<>();
             // 重新绑定角色关系
-            for (Long roleId : userRoleDTO.getRoleIds()) {
+            for (String roleId : userRoleDTO.getRoleIds()) {
                 UserRole userRole = CommonUtils.copyProperties(userRoleDTO, UserRole.class);
-                userRole.setId(snowFlake.nextId());
+                userRole.setId(snowFlake.nextIdStr());
                 userRole.setRoleId(roleId);
                 userRoleList.add(userRole);
             }
@@ -326,10 +326,10 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
      * @return
      */
     @Override
-    public CompanyAndUserVo getUserData(List<Long> longList) {
+    public CompanyAndUserVo getUserData(List<String> longList) {
         CompanyAndUserVo res = new CompanyAndUserVo();
-        Long company = longList.get(0);
-        Long userId = longList.get(1);
+        String company = longList.get(0);
+        String userId = longList.get(1);
         Cache companyCache = cacheManager.getCache(CacheConstants.COMPANY_VAL);
         Cache userCache = cacheManager.getCache(CacheConstants.USER_VAL);
         Cache.ValueWrapper companyWrapper = companyCache.get(company);
@@ -358,7 +358,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
     }
 
     @Override
-    public String getUserName(Long id) {
+    public String getUserName(String id) {
         Cache userCache = cacheManager.getCache(CacheConstants.USER_VAL);
         Cache.ValueWrapper userWrapper = userCache.get(id);
         if (userWrapper == null) {
@@ -388,7 +388,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
 
     @Override
     // TODO 此接口需优化
-    public Long getMostPossibleUserId(String name) {
+    public String getMostPossibleUserId(String name) {
         QueryWrapper<User> wrapper = new QueryWrapper<>();
         wrapper.eq(MagicPointConstant.NAME, name);
         return this.list(wrapper).get(0).getId();
@@ -401,7 +401,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
      * @return 以树（treelist）形式返回数据
      */
     @Override
-    public List<TreeList> getQueryListData(Long judgeId) {
+    public List<TreeList> getQueryListData(String judgeId) {
         if (AdminUtil.isSuperAdmin()) {
             List<TreeList> res = new ArrayList<>();
             List<Organization> organizationList = organizationService.list();
@@ -434,7 +434,7 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
      * @param companyId
      */
     @Override
-    public void updateUserAfterAllocRole(Long userId, Long companyId) {
+    public void updateUserAfterAllocRole(String userId, String companyId) {
         UpdateWrapper<User> wrapper = new UpdateWrapper<>();
         wrapper.eq(MagicPointConstant.ID, userId);
         wrapper.set(MagicPointConstant.COMPANY_ID, companyId);
@@ -448,9 +448,9 @@ public class UserServiceImpl extends ServiceImpl<UserMapper, User> implements IU
      * @return
      */
     @Override
-    public List<RoleDto> queryRoleOfUser(Long userId) {
+    public List<RoleDto> queryRoleOfUser(String userId) {
         List<UserRole> userRoleList = userRoleService.listByUserId(userId);
-        List<Long> roleIds = userRoleList.stream().map(UserRole::getRoleId).collect(Collectors.toList());
+        List<String> roleIds = userRoleList.stream().map(UserRole::getRoleId).collect(Collectors.toList());
         List<Role> roleList = roleService.listByIds(roleIds);
         List<RoleDto> roleDtoList = CommonUtils.convertList(roleList, RoleDto.class);
         return roleDtoList;
